<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="Resgetration Form"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/fullName"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Last Name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/userEmailId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
           android:layout_marginVertical="10dp"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/mobileNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:drawableLeft="@drawable/baseline_call_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/mobileNumber"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"

            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Faculty and Education:"
            android:textColor="@color/black"
            android:textSize="20dp" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
          android:theme="@style/mySpinnerItemStyle"
            android:padding="5dp" />





        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/userIDTextInputLayout"-->
        <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
        <!--            android:layout_width="match_parent"-->

        <!--            android:layout_margin="10dp"-->
        <!--            android:layout_height="wrap_content">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/userIDTextInputEditText"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:hint="User ID" />-->
        <!--        </com.google.android.material.textfield.TextInputLayout>-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="10dp"
            android:text="Gender"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginStart="5dp"
            android:layout_marginVertical="10dp"
            android:gravity="center"

            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/javaRB"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"
                android:padding="4dp"
                android:text="Male"
                android:textAlignment="center"
                android:textSize="20sp" />

            <!--adding a radio button -->
            <RadioButton
                android:id="@+id/cRB"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"
                android:padding="4dp"
                android:text="Female"
                android:textAlignment="center"
                android:textSize="20sp" />


        </RadioGroup>

        <CheckBox
            android:id="@+id/terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/terms_conditions"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="Confirm"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

<!--        <TextView-->
<!--            android:id="@+id/already_user"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginVertical="10dp"-->
<!--            android:gravity="center"-->
<!--            android:padding="10dp"-->
<!--            android:text="@string/already_user"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="15sp" />-->

    </LinearLayout>

</ScrollView>